--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="와이어프레임_캐논.jpg" />
+    <img src="image/와이어프레임_캐논.jpg" />
   </body>
 </html>
